@@ -9,6 +9,8 @@
 <input type="text" name="qs[netnode]" data-mode="netnode" value="" size="15" {tip text="Enter netnode ID or name and press Enter" class="blend lms-ui-quick-search"}>
 &nbsp;<img src="img/netdev.gif" alt="" {tip text="Enter netdevice ID or name and press Enter"}>
 <input type="text" name="qs[netdevice]" data-mode="netdevice" value="" size="15" {tip text="Enter device ID, name or serial number and press Enter" class="blend lms-ui-quick-search"}>
+&nbsp;<img src="img/wireless.gif" alt="" {tip text="Enter wireless SSID and press Enter"}>
+<input type="text" name="qs[wireless]" data-mode="wireless" value="" size="15" {tip text="Enter wireless SSID and press Enter" class="blend lms-ui-quick-search"}>
 &nbsp;<img src="img/ticket.gif" alt="" {tip text="Enter request tracker ID, subject or requestor name and press Enter"}>
 <input type="text" name="qs[ticket]" data-mode="ticket" value="" size="15" {tip text="Enter request tracker ID, subject or requestor name and press Enter" class="blend lms-ui-quick-search"}>
 &nbsp;<img src="img/account.gif" alt="" {tip text="Enter account or alias name and press Enter"}>
